--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
         <div id="transaction-log"></div>
 
         <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
+        <script src="js/ui.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
