Added more detail to the transaction panel

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <![endif]-->
 
 
-        <form id="send-transaction-form">
+        <form id="send-transaction-form" class="panel">
             <h1>Send Transaction</h1>
             <select id="account-selector" name="account">
             </select>
